--- a/mare/templates/ma-index.html
+++ b/mare/templates/ma-index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>MA-RealEstateSchool.com</title>
+    <title>MASS-RealEstateSchool.com</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <link rel="stylesheet" href="http://isomerica.net/~stu/mare/css/lightbox.css" type="text/css" media="screen" />
 
@@ -84,7 +84,7 @@
                     <div align="center">
                       <a class="style17" href="http://www.bbb.org/boston/business-reviews/real-estate-schools/massachusetts-real-estate-school-in-woburn-ma-125531/">
                         
-                        <img src="http://isomerica.net/~stu/mare/images/cbbb-badge-horz.png" alt="bblogo" /><br/>
+                        <img src="http://blue2.bbb.org/content/images/global/cbbb-badge-horz.png" alt="bblogo" /><br/>
                         Check Out Our BBB Listing<br/>
                     </div>
                   </td>
@@ -290,11 +290,10 @@
       <td bgcolor="#e3a81c" class="style6"><table width="900" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td width="20" class="style12">&nbsp;</td>
-          <td height="30" class="style12">All rights reserved - <strong>MA-RealEstateSchool.com</strong></td>
-          <td width="450" class="body"><div align="center" class="style7 style11">
-            <div align="right"><strong>Contact us:</strong> info@ma-realestateschool.com or 781-787-0911</div>
-          </div></td>
-          <td width="20" class="body">&nbsp;</td>
+          <td height="30" class="style12">All rights reserved - <strong>MASS-RealEstateSchool.com</strong></td>
+          <td class="body style12">
+                  <strong>Contact us: </strong><a href="mailto:info@mass-realestateschool.com">info@mass-realestateschool.com</a> or 781-787-0911
+          </td>
         </tr>
       </table></td>
       <td>&nbsp;</td>
@@ -317,6 +316,7 @@
       <td>&nbsp;</td>
     </tr>
   </table>
+  <img src="http://www.sente.cc/white.gif" />
 </div>
 </body>
 </html>
