changed MA- to MASS-

--- a/mare/templates/layout.html
+++ b/mare/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>{% block title %}Welcome{% endblock %} | MA-RealEstateSchool.com</title>
+        <title>{% block title %}Welcome{% endblock %} | MASS-RealEstateSchool.com</title>
 
         {#
         <link rel="stylesheet" href="http://sente.cc/~chris/style_playlist.css">
@@ -46,7 +46,7 @@
 
 
         <div class=page>
-            <h1>MA-RealEstateSchool.com</h1>
+            <h1>MASS-RealEstateSchool.com</h1>
             <div class=navigation>
                 
 
@@ -82,7 +82,7 @@
                 {% block body %}{% endblock %}
             </div>
             <div class=footer>
-                <a href="http://MA-RealEstateSchool.com"><strong>MA-RealEstateSchool.com</strong></a>
+                <a href="http://MASS-RealEstateSchool.com"><strong>MASS-RealEstateSchool.com</strong></a>
                 <a style="float:right;" href="{{ url_for('accounts.contact') }}"><strong>contact us</strong></a>
             </div>
 
@@ -140,13 +140,13 @@
                 </ul>
                 <ul style="list-style-type:none;line-height:1.5em">
                     <li>
-                    For Any Technical Questions, please email Mike at <a href="mailto://info@ma-realestateschool.com">info@ma-realestateschool.com</a> or call (978) 979-1061
+                    For Any Technical Questions, please email Mike at <a href="mailto:info@mass-realestateschool.com">info@mass-realestateschool.com</a> or call (978) 979-1061
                     </li>
                 </ul>
             </center>
         
         {% endif %}
-
+            <img src="http://www.sente.cc/white.gif" />
         </div>
     </body>
 </html>
