--- a/mare/templates/videos.html
+++ b/mare/templates/videos.html
@@ -4,8 +4,16 @@
 
     <div id="playlist">
         {% for s in stats %}
-            <div style="display:inline-block;">
-                <a href="/video/?video_id={{s.video.id}}">
+
+            {% if s.status > 0 %}
+                {% if s.status == s.video_id %}
+                <div style="display:inline-block;">
+                        <a href="/video/?video_id={{s.video.id}}">
+                    {% else %}
+                <div style="display:inline-block;">
+                        <a href="/video/?video_id={{s.video.id}}">
+                {% endif %}
+
                     <strong>{{s.video.title}}</strong><br>
 
                     <img src="http://isomerica.net/~stu/mare/imgs/{{ 'images2/' + s.video.module + '_small.jpg' }}" />
@@ -14,6 +22,19 @@
                 </a>
                 <div id="stats_{{s.uid}}" class="progressbar"></div>
             </div>
+            {% else %}
+            <div style="display:inline-block;">
+                    <a href="#" onclick="alert('You must watch the videos in order');return false;";>
+                    <strong>{{s.video.title}}</strong><br>
+
+                    <img src="http://isomerica.net/~stu/mare/imgs/{{ 'images2/' + s.video.module + '_small.jpg' }}" />
+                    <br />
+                    <strong>{{(100*s.watched)//s.video.duration}}%</strong>
+                    </a> 
+                <div id="stats_{{s.uid}}" class="progressbar"></div>
+            </div>
+            {% endif %}
+
         {% endfor %}
     </div>
 
