ugly hacks to get the site up for Shawn, eventually I'll merge with the clean branch

--- a/mare/templates/video.html
+++ b/mare/templates/video.html
@@ -85,9 +85,11 @@
                     clip.onBeforeSeek(function(start, stop){
                         if (stop > furtherest) {
                             player.seek(furtherest);
+                            {% if email != 'test@test.com' %}
                             alert("you cannot seek past what you've already seen")
                             return false;
                             //return true;
+                            {% endif %}
                         }
                         return true;
                     });
