--- a/mare/templates/video.html
+++ b/mare/templates/video.html
@@ -133,7 +133,7 @@
                             user_id:{{user.uid}},
                             video_id:{{video.id}},
                             length:Math.round(player.getClip().fullDuration),
-                            time:Math.Round(player.getTime())
+                            time:Math.round(player.getTime())
                         },
                         success: function(html){
                             var test="nothing";
