--- a/mare/templates/contact.html
+++ b/mare/templates/contact.html
@@ -10,7 +10,7 @@
       <dd><input type=text name=username size=30 value="{{ request.form.username }}">
       #}
       <dt>E-Mail:
-      <dd><input type=text name=email size=30 value="{{ request.form.email }}">
+      <dd><input type=text name=email size=30 value="{{ g.user.email }}" placeholder="{{g.user.email}}" />
 
       <dt>Question/Comments:
       <dd><textarea name="comments" style="width:70%; height:10em;"></textarea>
