--- a/mare/templates/videos.html
+++ b/mare/templates/videos.html
@@ -6,7 +6,10 @@
     {% if finished == True %}
         <center>
             <span style="display:block;background-color:yellow; width:20%;">
+                <!--
                 <h3><a href="{{url_for('static',filename='certificates/certificate-%s.pdf' % g.user.uid )}}">Congratulations! Print your certificate</a></h3>
+                -->
+                <h3>Congratulations! Print your certificate</h3>
             </span>
 
             <form action="/print_cert" method=post>
@@ -47,42 +50,47 @@
                     </div>
             {% else %}
             
-            {% if s.status > 0 %}
-                {% if s.status == s.video_id %}
+                {% if s.status > 0 %}
+                    {% if s.status == s.video_id %}
+                    <div style="display:inline-block;">
+                            <a href="/video/?video_id={{s.video.id}}">
+                        {% else %}
+                    <div style="display:inline-block;">
+                            <a href="/video/?video_id={{s.video.id}}">
+                    {% endif %}
+
+                        <strong>{{s.video.title}}</strong><br>
+
+                        <img src="http://isomerica.net/~stu/mare/imgs/{{ 'images2/' + s.video.module + '_small.jpg' }}" />
+                        <br />
+                        <strong>{{(100*s.watched)//s.video.duration}}%</strong>
+                    </a>
+                    <div id="stats_{{s.uid}}" class="progressbar"></div>
+                </div>
+                {% else %}
                 <div style="display:inline-block;">
-                        <a href="/video/?video_id={{s.video.id}}">
-                    {% else %}
-                <div style="display:inline-block;">
-                        <a href="/video/?video_id={{s.video.id}}">
+                        <a href="#" onclick="alert('You must watch the videos in order');return false;";>
+                        <strong>{{s.video.title}}</strong><br>
+
+                        <img src="http://isomerica.net/~stu/mare/imgs/{{ 'images2/' + s.video.module + '_small.jpg' }}" />
+                        <br />
+                        <strong>{{(100*s.watched)//s.video.duration}}%</strong>
+                        </a> 
+                    <div id="stats_{{s.uid}}" class="progressbar"></div>
+                </div>
                 {% endif %}
 
-                    <strong>{{s.video.title}}</strong><br>
-
-                    <img src="http://isomerica.net/~stu/mare/imgs/{{ 'images2/' + s.video.module + '_small.jpg' }}" />
-                    <br />
-                    <strong>{{(100*s.watched)//s.video.duration}}%</strong>
-                </a>
-                <div id="stats_{{s.uid}}" class="progressbar"></div>
-            </div>
-            {% else %}
-            <div style="display:inline-block;">
-                    <a href="#" onclick="alert('You must watch the videos in order');return false;";>
-                    <strong>{{s.video.title}}</strong><br>
-
-                    <img src="http://isomerica.net/~stu/mare/imgs/{{ 'images2/' + s.video.module + '_small.jpg' }}" />
-                    <br />
-                    <strong>{{(100*s.watched)//s.video.duration}}%</strong>
-                    </a> 
-                <div id="stats_{{s.uid}}" class="progressbar"></div>
-            </div>
             {% endif %}
-
-            {% endif %}
-
-
 
 
         {% endfor %}
+
+        <!--
+
+        {% for s in stats -%}
+        {{s.uid}}:{{ s.video.id }} = {{(100*s.watched)//s.video.duration}}% | {{s.watched}} | {{ s.video.duration }}
+        {% endfor %}
+        -->
     </div>
 
     <script>
