--- a/mare/templates/videos.html
+++ b/mare/templates/videos.html
@@ -27,12 +27,12 @@
 
 
     <div id="playlist">
-        {% for s in stats %}
+        {% for s in stats -%}
 
 
-            {% if g.user.email == 'test@test.com'  %}
+            {% if g.user.email == 'test@test.com'  -%}
 
-                        {% if s.status == s.video_id %}
+                        {% if s.status == s.video_id -%}
                         <div style="display:inline-block;">
                                 <a href="/video/?video_id={{s.video.id}}">
                             {% else %}
@@ -71,7 +71,6 @@
                 <div style="display:inline-block;">
                         <a href="#" onclick="alert('You must watch the videos in order');return false;";>
                         <strong>{{s.video.title}}</strong><br>
-
                         <img src="http://isomerica.net/~stu/mare/imgs/{{ 'images2/' + s.video.module + '_small.jpg' }}" />
                         <br />
                         <strong>{{(100*s.watched)//s.video.duration}}%</strong>
