switched to JSON messages

--- a/mare/templates/video.html
+++ b/mare/templates/video.html
@@ -116,9 +116,10 @@
                             user_id: {{user.uid}},
                             video_id: {{video.id}},
                             length: Math.round(player.getClip().fullDuration),
-                            time: playertime
+                            time: playertime,
                         },
-                        success: function(html){
+                        dataType:"json",
+                        success: function(data){
                            if(playertime  > furtherest){
                                furtherest = playertime;
                            }
