--- a/mare/static/style.css
+++ b/mare/static/style.css
@@ -183,3 +183,14 @@ div.error {
     padding: 4px;
     font-size: 13px;
 }
+div.message {
+    margin-left:30%;
+    margin-right:30%;
+    text-align:center;
+    background: #FAE4E4;
+    border: 1px solid #DD6F6F;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    padding: 4px;
+    font-size: 13px;
+}
