--- a/mare/templates/layout.html
+++ b/mare/templates/layout.html
@@ -3,13 +3,17 @@
     <head>
         <title>{% block title %}Welcome{% endblock %} | MASS-RealEstateSchool.com</title>
 
-        {#
-        <link rel="stylesheet" href="http://sente.cc/~chris/style_playlist.css">
-        <link rel=stylesheet type=text/css href="http://sente.cc/~chris/style.css">
-        #}
+
 
         <script src="{{url_for('static',filename='jquery.min.js')}}"></script>
         <script src="{{url_for('static',filename='jquery-ui.min.js')}}"></script>
+
+
+        <!--
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+        -->
+
         <script src="{{url_for('static',filename='jquery.idle-timer.js')}}"></script>
         <script src="{{url_for('static',filename='flowplayer-3.2.6.min.js')}}"></script>
         <script src="{{url_for('static',filename='utils.js')}}"></script>
@@ -88,6 +92,9 @@
                         <li><strong>{{ message }}</strong></li>
                         {% endfor %}
                     </ul>
+                    {% for message in flashes %}
+                        <div class=message>{{ message }}</div>
+                    {% endfor %}
                 {% endif %}
             {% endwith %}
             <div class=body>
