--- a/mare/templates/videos.html
+++ b/mare/templates/videos.html
@@ -74,10 +74,7 @@
                     <div id="stats_{{s.uid}}" class="progressbar"></div>
                 </div>
                 {%- endif -%}
-
             {%- endif -%}
-
-
         {%- endfor -%}
 
         <!--
@@ -95,5 +92,22 @@
             {% endfor %}
         });
     </script>
+
+    <div id="troubleshooting" style="background: #fff url(/static/images/rpcQA.gif) repeat-x left top;">
+        <center><h1>Trouble Shooting</h1></center>
+        <p>Before calling the number below or emailing, please take the following steps:</p>
+
+        <p><strong>Problem:</strong> My videos won&#39;t play</p>
+        <p>Most likely, your browsing software is very old.  To use our program you will need to have Internet Explorer 8 or Google Chrome.  To download the latest version of Internet Explorer, click here: <a href="http://windows.microsoft.com/en-us/internet-explorer/products/ie/home" target="_blank">http://windows.microsoft.com/<WBR>en-us/internet-explorer/<WBR>products/ie/home</a></p>
+        <p>Are you using an iPad or other mobile device? Some mobile devices may not display or play videos correctly. Try again on another PC or desktop computer.</p>
+
+        <p><strong>Problem:</strong> The videos are interrupted by circles on the screen and it is aggravating!</p>
+        <p>This is most likely your own internet connection.  We have paid for the fastest connection to the Internet available and we have made the videos very small so they will play quickly, but Internet video is only as fast as it&#39;s slowest link.  Sometimes home internet connection speeds jam up if a lot of people in your neighborhood are using the internet.  Try using the program at another time or at another location; there is nothing we can do here.</p> 
+
+        <p><strong>Problem:</strong> Videos don&#39;t continue to next section</p>
+        <p>Click on the next video!  If Module 1 Part 1 finishes, click &quot;Back To Main Menu&quot; to go back to the previous screen and click the next video in the sequence.</p>
+
+    </div>
+
 
 {% endblock %}
