changed main-page image reference: ma-realestateschool-price2.jpg

--- a/mare/templates/ma-index.html
+++ b/mare/templates/ma-index.html
@@ -76,7 +76,7 @@
                     <td><div align="center"><a href="/reg/"><img src="http://isomerica.net/~stu/mare/images/ma-realestateschool-addcart2.jpg" width="235" height="80" border="0"></a></div></td>
                 </tr>
                 <tr>
-                  <td><div align="center"><img src="http://isomerica.net/~stu/mare/images/ma-realestateschool-price2.jpg" width="235" height="110"></div></td>
+                  <td><div align="center"><img src="http://www.mass-realestateschool.com/static/images/ma-realestateschool-price2.jpg" width="235" height="110"></div></td>
                 </tr>
                 <tr>
                   <td>
