moved tile.gif from isomerica -> localhost

--- a/mare/templates/ma-index.html
+++ b/mare/templates/ma-index.html
@@ -94,7 +94,7 @@
           </table></td>
         </tr>
       </table></td>
-      <td width="50%" background="http://isomerica.net/~stu/mare/images/tile.gif"></td>
+      <td width="50%" background="http://www.mass-realestateschool.com/static/images/tile.gif"></td>
     </tr>
   </table>
   <table width="1000" border="0" cellspacing="0" cellpadding="0">
