reset 'autoPlay:true' on ma-index.html...

--- a/mare/templates/ma-index.html
+++ b/mare/templates/ma-index.html
@@ -65,7 +65,7 @@
               <td width="50">&nbsp;</td>
               <td width="450"><a id="video" href="http://s3.amazonaws.com/mare/bradmarealestate1633.flv" style="display:block; background:#000; height: 324px; width: 450px;"></a></td>
 <script language="JavaScript">
-    flowplayer("video", "http://releases.flowplayer.org/swf/flowplayer-3.2.7.swf", {clip:{autoPlay:false}});
+    flowplayer("video", "http://releases.flowplayer.org/swf/flowplayer-3.2.7.swf", {clip:{autoPlay:true}});
 </script>
               <td>&nbsp;</td>
               <td width="398"><table width="398" border="0" cellspacing="0" cellpadding="0">
