--- a/mare/templates/ma-index.html
+++ b/mare/templates/ma-index.html
@@ -189,7 +189,7 @@
                     <td height="10"></td>
                   </tr>
                   <tr>
-                    <td width="30" valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="absmiddle"></td>
+                    <td width="30" valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="middle"></td>
                     <td class="body"><strong>Step One:</strong> Submit Payment </p> </td>
                   </tr>
                   <tr>
@@ -197,7 +197,7 @@
                     <td height="10"></td>
                   </tr>
                   <tr>
-                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="absmiddle"></td>
+                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="middle"></td>
                     <td class="body"><strong>Step Two:</strong> You will receive an instant access code to the course website </p></td>
                   </tr>
                   <tr>
@@ -205,7 +205,7 @@
                     <td height="10"></td>
                   </tr>
                   <tr>
-                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="absmiddle"></td>
+                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="middle"></td>
                     <td class="body"><strong>Step Three:</strong> Watch the video for as little or as long as you want in one sitting (our software will remember where you left off so you can log off and log back on as needed) Most people complete the course in a few days, but take as long as you want ? even weeks or months! </td>
                   </tr>
                   <tr>
@@ -213,7 +213,7 @@
                     <td height="10"></td>
                   </tr>
                   <tr>
-                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="absmiddle"></td>
+                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="middle"></td>
                     <td><span class="body"><strong>Step Four:</strong> Upon completion of the video course our staff is notified and we will send you a certificate the next business day which fulfills your MA Realtor/Broker CE Requirement</span>                      </p></td>
                   </tr>
 				   
@@ -222,7 +222,7 @@
                     <td height="10"></td>
                   </tr>
                   <tr>
-                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="absmiddle"></td>
+                    <td valign="top"><img src="http://www.mass-realestateschool.com/static/images/bullet.jpg" width="25" height="21" align="middle"></td>
                     <td><span class="body">Contact our office for one-on-one answers to your questions on course material </span>                      </p></td>
                   </tr>
                 </table></td>
@@ -254,20 +254,20 @@
             <p align="left" class="style8"><strong>2. Do your Continuing Education Classes fulfill my 12 hour Continuing Education requirement I need as a Massachusetts Realtor or Real Estate Broker? </strong></p>
             <p align="left" class="style8">Yes, our online classes fulfill your requirements. You will receive a stamped certificate on completion of your course</p>
             <p align="left" class="style8"><strong>3. How Do Online Classes work? </strong></p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle"> Once You pay for the course, you are sent login information to watch a recorded course </p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle"> You can watch as much as you like at a time, and logoff. When you log back in, the lecture will start where you were. </p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle"> Once the lecture is finished, you will receive a confirmation that you have completed the course and we mail you a certificate </p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle"> No more driving to a lecture and wasting an entire day and night of your life!! Who has time for that??</p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle"> Once You pay for the course, you are sent login information to watch a recorded course </p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle"> You can watch as much as you like at a time, and logoff. When you log back in, the lecture will start where you were. </p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle"> Once the lecture is finished, you will receive a confirmation that you have completed the course and we mail you a certificate </p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle"> No more driving to a lecture and wasting an entire day and night of your life!! Who has time for that??</p>
             <p align="left" class="style8"><strong>4. How come I've never heard of being able to fulfill my CE Requirement online before? </strong></p>
             <p align="left" class="style7"><span class="body">Because it wasn't allowed! In 2010, the state of MA approved Online Education to fulfill their 12 Hour Continuing Education requirements. Here is a link to the approval: </span><a href="http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/requirements-for-online-continuing-education.html" target="_blank" class="style10">http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/requirements-for-online-continuing-education.html</a> </p>
             <p align="left" class="style8"><strong>5. What classes do you offer for your online continuing education? </strong></p>
             <p align="left" class="style7"><span class="body">The following 6 courses will be taught in 2 hour blocks:</span></p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle">RE04R08 Chapter 93A</p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle">RE09R07 Residential Rental</p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle">RE27RC07 1031 Exchanges</p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle">RE05RC01 Contract Law</p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle">RE25RC08 Financing</p>
-            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="absmiddle">RE57R07 Brokerage Relationships</p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle">RE04R08 Chapter 93A</p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle">RE09R07 Residential Rental</p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle">RE27RC07 1031 Exchanges</p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle">RE05RC01 Contract Law</p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle">RE25RC08 Financing</p>
+            <p align="left" class="style8"><img src="http://www.mass-realestateschool.com/static/images/bullet2.jpg" width="25" height="21" align="middle">RE57R07 Brokerage Relationships</p>
             </td>
           <td width="20">&nbsp;</td>
         </tr>
